blog in responsive columns fixed and aligned

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -85,6 +85,29 @@
     }
 }
 
+.responsivecolumns .blogsearch__form-body {
+    @media @mobile {
+        padding: 0;
+        display: block;
+    }
+}
+
+.responsivecolumns .blogsearch__form-group:nth-child(2) {
+    @media @mobile {
+        padding: 0;
+        display: block;
+        margin-top: 0;
+    }
+}
+
+.responsivecolumns .blogsearch__form-group:nth-child(1) {
+    @media @mobile {
+        padding: 0;
+        display: block;
+        margin-top: 0;
+    }
+}
+
 .blogsearch__legend {
     margin-bottom: 20px;
     &:after {
